<resources>
    <string name="app_name">FizzBuzz</string>

    <string name="hello_world">Result : </string>
    <string name="action_settings">Settings</string>
</resources>
